--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
                 width="370"
                 height="294"
               />
+              <p class="work-text">Десктопные приложения</p>
             </li>
             <li class="work-item">
               <img
@@ -149,6 +150,7 @@
                 width="370"
                 height="294"
               />
+              <p class="work-text">Мобильные приложения</p>
             </li>
             <li class="work-item">
               <img
@@ -157,6 +159,7 @@
                 width="370"
                 height="294"
               />
+              <p class="work-text">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
